--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^1",
+    "million": "^3.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "usehooks-ts": "^2.15.1"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1",
