--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,6 +15,7 @@ tauri = { version = "1", features = [ "window-set-size", "window-start-dragging"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tmi = "0.5.0"
+reqwest = { version = "0.11", features = ["json"] }
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
